k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: team-promptheus
  labels:
    name: team-promptheus
