k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-promptheus-ingress
  namespace: team-promptheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: team-promptheus.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 3000
      - path: /api/repositories
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 8080
      - path: /api/genai
        pathType: Prefix
        backend:
          service:
            name: genai-service
            port:
              number: 3003
      - path: /api/search
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 8070
      - path: /api/contributions
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 8082
